--- a/src/component/ProductListing/ProductListing.css
+++ b/src/component/ProductListing/ProductListing.css
@@ -1,4 +1,5 @@
 .product-listing-page {
+    margin-top: 132px;
     width: 100%;
     min-height: 100vh;
 }
